--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,3 @@
-# version: '3'
-# services:
-#   app:
-#     build: ./backend
-#     restart: unless-stopped
-#     depends_on:
-#       - db
-#     networks:
-#       - backnet
-#     volumes:
-#       - ./backend:/orders_management_app
-#     ports:
-#       - "8000:5000"
-#     environment:
-#       MYSQL_HOST: db
-#       MYSQL_USER: root
-#       MYSQL_PASSWORD: 12345678
-#       MYSQL_DB: orders_management
-
-#   db:
-#     build: ./db/
-#     command: '--default-authentication-plugin=mysql_native_password'
-#     restart: always
-#     volumes:
-#       - app-data:/var/lib/mysql
-#     environment:
-#       MYSQL_ROOT_PASSWORD: 12345678
-#       MYSQL_DATABASE: orders_management
-
-#     ports:
-#       - "32001:3306"
-
-#     expose:
-#       - 3306
-#       - 32001
-
-#     networks:
-#       - backnet
-
-# volumes:
-#   app-data:
-
-# networks:
-#   backnet:
-
 version: '3'
 services:
   srv:
@@ -50,21 +5,20 @@ services:
     container_name: srv
     build:
       context: ./backend
+    volumes:
+      - ./backend:/app
     restart: unless-stopped
     depends_on:
       - db
     ports:
-    - "8000:5000"
+    - "8080:5000"
 
   db:
-    # image: mysql_db
-    # image: mysql:8.0
     container_name: db
     restart: unless-stopped
     build:
       context: ./db
     volumes:
-    # - ./db/scripts/schema.sql:/docker-entrypoint-initdb.d/0_init.sql
     - orders-data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: 12345678
